[tool.poetry]
name = "label-printer"
version = "0.1.0"
description = ""
authors = ["Mathieu Poussin <mpoussin@scaleway.com>"]

[tool.poetry.dependencies]
python = "^3.9"
escpos = "^1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
